service/tests/snapshots/snapshot_adversarial_tests__empty_signature_rejected.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 401,
  "error": "Signature must be 64 bytes"
}
