service/tests/snapshots/snapshot_adversarial_tests__forged_certificate_signup.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 400,
  "error": "Invalid device certificate"
}
