service/tests/snapshots/snapshot_adversarial_tests__future_timestamp_rejected.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 401,
  "error": "Timestamp out of range"
}
