service/tests/snapshots/snapshot_adversarial_tests__incomplete_signup_body.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: combined
---
status: 422
body: Failed to deserialize the JSON body into the target type: missing field `root_pubkey` at line 1 column 30
