service/tests/snapshots/snapshot_adversarial_tests__invalid_kid_format.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 401,
  "error": "Invalid KID format"
}
