service/tests/snapshots/snapshot_adversarial_tests__malformed_json_signup.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: combined
---
status: 400
body: Failed to parse the request body as JSON: key must be a string at line 1 column 2
