service/tests/snapshots/snapshot_adversarial_tests__missing_auth_headers.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 401,
  "error": "Missing X-Device-Kid header"
}
