service/tests/snapshots/snapshot_adversarial_tests__non_numeric_timestamp.snap
---
source: service/tests/snapshot_adversarial_tests.rs
expression: json
---
{
  "_status": 401,
  "error": "Invalid timestamp"
}
